# smart_control

./: .gitignore  CMakeLists.txt  Doxyfile  README.md  main.cpp
.github/workflows/: doxygen.yml
include/: DHT11Sensor.h  digitalSwitch.h  mqttHandler.h
src/: DHT11Sensor.cpp  digitalSwitch.cpp  mqttHandler.cpp
